--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
